################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	Description: create the GSE common convenience library
################################################################################

SUBDIRS = . test

noinst_LTLIBRARIES = libgse_common.la

sources = \
	gse_virtual_buffer.c \
	gse_common.c \
  crc.c	

libgse_common_la_SOURCES = $(sources)

INCLUDES =

