################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	Description: create the GSE common convenience library
################################################################################

SUBDIRS = . \
	test

noinst_LTLIBRARIES = libgse_common.la

sources = \
	virtual_buffer.c \
	header.c \
	status.c \
	crc.c  

libgse_common_la_SOURCES = $(sources)

