################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	Description: create the GSE test program
################################################################################

SUBDIRS = \
	icmp \
	icmp+tcp \
	ipv4 \
	ipv6 \
	udp \
	udplite
