################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	Description: create the GSE test program
################################################################################

SUBDIRS = \
	h323 \
	misc \
	mp3 \
	rtp_rtp_icmp \
	video1 \
	video2 \
	video3 \
	voip \
	voip+video
